software-center (1.1.10) UNRELEASED; urgency=low

  * softwarecenter/distro/aptutils.py:
    - removed, moved into python-apt
  * softwarecenter/view/appview.py:
    - ignore negative ratings (LP: #510409)
  * softwarecenter/db/database.py:
    - assert we have a popcon_max value
  * debian/control:
    - updated dependencies to latest python-apt

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 20 Jan 2010 18:20:40 +0100

software-center (1.1.9) lucid; urgency=low

  [ Gary Lasker ]
  * softwarecenter/app.py,
    softwarecenter/view/softwarepane.py:
    - add code to reselect the app in the list view on
      a tree model refresh
  * softwarecenter/view/widgets/pathbar2.py:
    - remove explicit callback when a button is appended
      to the pathbar as it is not needed
  * softwarecenter/app.py:
    - fix double call to the all/supported only menu
      item handlers

  [ Michael Vogt ]
  * softwarecenter/apt/aptcache.py:
    - properly fix removal warning (needs latest python-apt)
  * debian/control:
    - depend on latest python-apt
  * merged lp:~mmcg069/software-center/matts-pathbar-integration
    Many thanks to Matthew McGowan
    This gives us much nicer layout and a popcon column

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 20 Jan 2010 14:56:15 +0100

software-center (1.1.8) lucid; urgency=low

  * softwarecenter/view/appdetailsview.py:
    - replace thumbnail checking thread with (much nicer) gio
      code
  * softwarecenter/app.py:
    - simplify state save logic
    - save window size
    - fix crash in ConfigParser (LP: #494899)
  * softwarecenter/view/installedpane.py:
    - fix search in installed section (LP: #504380)
  * softwarecenter/apt/aptcache.py:
    - fix missing warning on removal for non-english systems
      (LP: #486474)
  * softwarecenter/view/widgets/imagedialog.py:
    - fix crash because of missing import

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 13 Jan 2010 14:39:35 +0100

software-center (1.1.7) lucid; urgency=low
